Diminuindo o tamanho do input  para telas pequenas.

--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,8 @@
 
   .input {
     background-color: white;
-    border: 1px solid black;
+    width: 280px;
+    height: 10px;
   }
 
   .input input {
