--- a/src/App.css
+++ b/src/App.css
@@ -23,14 +23,14 @@
 
 .input {
   background-color: white;
-  border: 1px solid black;
-  padding: 15px;
+  padding: 12px;
   width: 380px;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   margin: 30px 0;
   display: flex;
   border-radius: 30px;
+  padding-left: 22px;
 }
 
 .input input {
